# programacao_escola

./: Kotlin.md  README.md
ES2/10_Demo/: IPVC.ESTG.ES2.sln
_escola/c#/: c#.txt  exercicio.cs
aula_PL_22_10_18/src/: JaNaoRebenta.java
c#/ES2/: ES2.sln
c#/ES2_PL_22_23/: ES2_PL_22_23.sln
c#/PL_23_03_02/: PL_23_03_02.sln
c/aulas_ex_c_inteiros/: ex1.c  ex3.c  ex6.c
c/c_youtube_pointers_freeCodeCamp_org/: CMakeLists.txt  main.cpp
c/ex_1_ficheiros_de_texto/: Cimeira2020.txt  (+6 more)
c/prog1_pratica/: CMakeLists.txt  ex3.c
c/prog1_pratica/PL_23_02_16/: ex1.c  ex1_23_02_16.c  ex2.c  ex2_23_02_16.c  ex3.c  ex3_23_02_16.c  exercicios.txt
c/prog1_pratica/PL_23_02_28__Exercicios1_FicheirosTexto2023/: CMakeLists.txt  curriculum.txt  ex1.c  ex2.c  ex3.c  ex5.c  numMul7.txt
c/prog1_pratica/PL_23_02_28_ficheiros_texto/: ex4.c
c/prog1_pratica/PL_23_03_07/: CMakeLists.txt  ex1.c
c/prog1_pratica/PL_23_03_07__Exercicios2_ficheirosBin2023/: ex1.c
c/prog1_pratica/PL_23_03_21__Exercicios4_OrdenacaoPesquisa2023/: CMakeLists.txt  main.c  novo.c
c/prog1_pratica/PL_23_04_11/: CMakeLists.txt  ex1.c  ex2.c  ex3.c  ex4.c  ex5.c  ficheiro.txt
c/prog1_pratica/PL_23_04_18/: CMakeLists.txt  lista.c  lista.h  main.c
c/prog1_pratica/PL_23_05_09_ListasLigadas/: CMakeLists.txt  datatypes.h  listaDupla.c  listaDupla.h  main.c  utils.c  utils.h
c/prog1_pratica/TP_23_02_17/: alunosEI_2023.txt  files.c  files.md  impares_ficheiro.c  numerosImpares.txt
c/prog1_pratica/TP_23_03_03/: CMakeLists.txt  aluno.c  bin1.c  bin2.c
c/prog1_pratica/trabalho_pratico2122/: CMakeLists.txt  main.c
(+473 files in other folders)
