cmake_minimum_required(VERSION 3.23)
project(prog1_pratica C)

set(CMAKE_C_STANDARD 99)

add_executable(untitled PL_23_02_16/ex1_23_02_16.c PL_23_02_16/ex2_23_02_16.c PL_23_02_16/ex3_23_02_16.c TP_23_02_17/files.c TP_23_02_17/impares_ficheiro.c PL_23_02_28_ficheiros_texto/ex1_23_02_28.c PL_23_02_28_ficheiros_texto/ex2_23_02_28.c TP_23_03_03/main.c)
